--- a/index.css
+++ b/index.css
@@ -152,14 +152,14 @@ header .logo span {
   color: var(--orange);
 }
 
-header .navbar a {
+header .navbar .menu a {
   color: #fff;
   font-size: 2rem;
   margin: 0.8rem;
   margin-top: -20px;
 }
 
-header .navbar a:hover {
+header .navbar .menu a:hover {
   color: var(--orange);
 }
 
@@ -214,7 +214,7 @@ header .search-bar-container label:hover {
 
 #menu-bar {
   color: #fff;
-  border: 1rem solid #fff;
+  border: 0.25rem solid #fff;
   border-radius: 0.5rem;
   font-size: 3rem;
   padding: 0.5rem 1.2rem;
@@ -594,7 +594,7 @@ background-color: #ffa500;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
   }
 
-  header .navbar a {
+  header .navbar .menu a {
     display: block;
     border-radius: 0.5rem;
     padding: 1.5rem;
