--- a/index.css
+++ b/index.css
@@ -585,6 +585,7 @@ background-color: #ffa500;
     right: 0;
     left: 0;
     background: #333;
+    /* border: silid 2px ; */
     border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
     padding: 1rem 2rem;
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
@@ -593,13 +594,62 @@ background-color: #ffa500;
   header .navbar.active {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
   }
+  .menu a {
+    display: block;
+    height: 100%;
+    font-size: 20px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    text-transform: uppercase;
+    /* text-shadow: 0 0 15px #8e54e9; */
+    transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    text-align: center;
+    padding: 0 10px;
+    /* margin-right: 30px; */
+  }
+  .menu a:after,
+  .menu a:before {
+    content: "";
+    position: absolute;
+    display: block;
+    border: 0px solid transparent;
+  }
+  
+  .menu a:after {
+    width: 0%;
+    height: 90%;
+    /* border-top: 2px solid #ffa500; */
+    /* border-bottom: 2px solid #ffa500; */
+    transition: all 0.3s ease;
+  }
+  
+  .menu a:before {
+    width: 75%;
+    height: 00%;
+    /* border-left: 2px solid #ffa500; */
+    /* border-right: 2px solid #ffa500; */
+    transition: all 0.5s ease;
+  }
+  
+  .menu a:hover::before {
+    height: 50%;
+  }
+  
+  .menu a:hover::after {
+    width: 80%;
+  }
 
   header .navbar .menu a {
     display: block;
     border-radius: 0.5rem;
-    padding: 1.5rem;
-    margin: 1.5rem 0;
+    padding: 0.5rem;
+    margin: 3.5rem 6;
     background: #222;
+    border: solid 2px var(--orange);
+    padding:0px -10px;
   }
 }
 
