--- a/index.css
+++ b/index.css
@@ -232,7 +232,7 @@ header .search-bar-container label:hover {
   z-index: 0;
 }
 .home img {
-  height: 480px;
+  height: 496px;
   width: 355px;
   border: 5px solid var(--orange);
   border-radius: 30px;
@@ -318,6 +318,7 @@ ul.experiences li {
 .lang-1 {
   margin: top 3rem;
   margin-right: 2rem;
+  /* color: #ffa500; */
   border: 2px solid #ffa500;
   padding: 4px;
   border-radius: 10px;
@@ -325,6 +326,8 @@ ul.experiences li {
 }
 .lang-1:hover {
   transform: scale(1.1);
+  background-color:rgb(195, 36, 116);
+  /* color: black; */
 }
 .where {
   font-size: 1.2857em; /* 18/16 -> 18px */
