--- a/index.css
+++ b/index.css
@@ -75,7 +75,9 @@ section {
   display: block;
   border: 0px solid transparent;
 }
-
+.highlight{
+  color: #ffa500;
+}
 .menu a:after {
   width: 0%;
   height: 100%;
